--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "install": "^0.13.0",
     "jest": "^24.9.0",
     "nock": "^12.0.3",
     "nodemon": "^1.18.7",
